Another back-up commit. Still unfinished,
Things work fairly well now:

The screen can be rotated while the timer is running, with no ill
effects.

The scramble sequence survives screen rotations; its image is
re-generated if required.

The "EditSolveDialog" is still largely disabled, though.

--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -203,7 +203,9 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="8dp"
             android:scaleType="fitStart"
-            tools:background="@color/red_material" />
+            android:visibility="invisible"
+            tools:background="@color/red_material"
+            tools:visibility="visible"/>
 
         <me.zhanghai.android.materialprogressbar.MaterialProgressBar
             android:id="@+id/progress_spinner"
