--- a/app/src/main/res/layout/item_time_list.xml
+++ b/app/src/main/res/layout/item_time_list.xml
@@ -19,7 +19,7 @@
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true">
 
-        <TextView
+        <com.aricneto.twistytimer.layout.StrikeoutTextView
             android:id="@+id/timeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,7 +30,9 @@
             android:maxLines="1"
             android:ellipsize="end"
             android:textStyle="bold"
-            tools:text="1:26.95" />
+            app:checked="false"
+            app:strikeoutColor="@color/dnf_strikeout"
+            tools:text="1:26.95"/>
 
         <TextView
             android:id="@+id/penaltyText"
