--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,9 +26,8 @@
     <color name="accentDarkColor">#D50000</color>
 
     <!-- TEXT -->
-
-
     <color name="red_material">#F44336</color>
+    <color name="dnf_strikeout">#BBF44336</color>
 
     <color name="yellow_material_700">#FBC02D</color>
 
