--- a/app/src/main/res/layout/dialog_time_details.xml
+++ b/app/src/main/res/layout/dialog_time_details.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingBottom="32dp"
     android:paddingTop="32dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="RtlHardcoded">
 
     <RelativeLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white">
 
-        <TextView
+        <!-- If the solve is a DNF, the time will be stuck out with an "X" -->
+        <com.aricneto.twistytimer.layout.StrikeoutTextView
             android:id="@+id/timeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -22,15 +23,16 @@
             android:layout_marginTop="8dp"
             android:textSize="28sp"
             android:textStyle="bold"
+            app:checked="false"
+            app:strikeoutColor="@color/dnf_strikeout"
             tools:text="35.50" />
 
         <TextView
             android:id="@+id/penaltyText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/timeText"
-            android:layout_marginLeft="8dp"
-            android:layout_toRightOf="@id/timeText"
+            android:layout_marginLeft="16dp"
+            android:layout_below="@id/timeText"
             android:textColor="@color/red_material"
             android:textSize="12sp"
             android:textStyle="bold"
@@ -57,7 +59,7 @@
             layout="@layout/view_divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_below="@id/timeText"
+            android:layout_below="@id/penaltyText"
             android:layout_marginTop="8dp" />
 
         <TextView
@@ -77,7 +79,7 @@
             tools:visibility="visible" />
 
         <TextView
-            android:id="@+id/scramble_text"
+            android:id="@+id/scrambleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/commentText"
@@ -89,8 +91,8 @@
             android:gravity="center_vertical"
             android:textColor="@color/md_blue_500"
             android:textSize="14sp"
-            tools:text="D2 U' R2 U2 R2 F2 U' B2 U' F2 U' R' B L D B' U' R U' R2 F U'"
             android:visibility="gone"
+            tools:text="D2 U' R2 U2 R2 F2 U' B2 U' F2 U' R' B L D B' U' R U' R2 F U'"
             tools:visibility="visible" />
 
         <include
@@ -98,7 +100,7 @@
             layout="@layout/view_divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_below="@id/scramble_text"
+            android:layout_below="@id/scrambleText"
             android:layout_marginTop="16dp" />
 
         <ImageView
@@ -115,7 +117,7 @@
             android:paddingLeft="8dp"
             android:paddingRight="16dp"
             android:paddingTop="8dp"
-            android:src="@drawable/ic_flag_black_18" />
+            android:src="@drawable/ic_flag_black_18"/>
 
         <ImageView
             android:id="@+id/commentButton"
@@ -124,7 +126,7 @@
             android:layout_below="@id/divider02"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:layout_toLeftOf="@id/editButton"
+            android:layout_toLeftOf="@id/penaltyButton"
             android:alpha="0.70"
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
