--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -101,6 +101,7 @@
 
         <LinearLayout
             android:id="@+id/quick_action_buttons"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -135,7 +136,7 @@
                 android:background="?android:attr/selectableItemBackground"
                 android:clickable="true"
                 android:padding="8dp"
-                android:text="+DNF"
+                android:text="@string/edit_penalties_plus_dnf"
                 android:textSize="@dimen/qab_text_size_normal"
                 android:textStyle="bold"
                 android:textColor="?colorTimerText"/>
@@ -148,7 +149,7 @@
                 android:background="?android:attr/selectableItemBackground"
                 android:clickable="true"
                 android:padding="8dp"
-                android:text="+2s"
+                android:text="@string/edit_penalties_plus_2"
                 android:textSize="@dimen/qab_text_size_normal"
                 android:textStyle="bold"
                 android:textColor="?colorTimerText"/>
@@ -163,7 +164,7 @@
                 android:clickable="true"
                 android:enabled="false"
                 android:padding="8dp"
-                android:text="-2s"
+                android:text="@string/edit_penalties_minus_2"
                 android:textSize="@dimen/qab_text_size_normal"
                 android:textStyle="bold"
                 android:textColor="?colorTimerText"/>
