--- a/app/src/main/res/layout/item_time_list.xml
+++ b/app/src/main/res/layout/item_time_list.xml
@@ -19,6 +19,7 @@
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true">
 
+        <!-- If the solve is a DNF, the time will be stuck out with an "X" -->
         <com.aricneto.twistytimer.layout.StrikeoutTextView
             android:id="@+id/timeText"
             android:layout_width="wrap_content"
